fixes broken layout

--- a/src/styles/abstracts/_animations.scss
+++ b/src/styles/abstracts/_animations.scss
@@ -80,7 +80,7 @@
 
 @keyframes upToHeader {
   0% {
-    height: 100vh;
+    height: 100%;
   }
 
   100% {
